# KPlot

./: .gitignore  .gitmodules  README.md  pyproject.toml
examples/: merge_batches.py  plot_series.py  read_history.py  read_horizon.py  read_waveforms.py  use_units.py
examples/data/batch/output-0001/: bhns.co_0.txt
examples/data/batch/output-0001/waveforms/: rpsi4_imag_0100.txt  rpsi4_imag_0200.txt  rpsi4_imag_0300.txt  rpsi4_imag_0400.txt  rpsi4_imag_0500.txt  rpsi4_real_0100.txt  rpsi4_real_0200.txt  rpsi4_real_0300.txt  rpsi4_real_0400.txt  rpsi4_real_0500.txt
examples/data/batch/output-0002/waveforms/: rpsi4_imag_0100.txt  rpsi4_imag_0200.txt  rpsi4_imag_0300.txt  rpsi4_imag_0400.txt  rpsi4_imag_0500.txt  rpsi4_real_0100.txt  rpsi4_real_0200.txt  rpsi4_real_0300.txt  rpsi4_real_0400.txt  rpsi4_real_0500.txt
examples/data/history/: bhns.mhd.hst
examples/data/horizon/: z4c.horizon_summary_0.txt
kplot/: __init__.py  batchmerge.py  history.py  horizon.py  seriesplot.py  units.py  waveforms.py
utilities/: __init__.py  horizon.py  seriesplot.py  waveforms.py
